Update Cuisine Webpage-Thssalonians Roa.html

--- a/Cuisine Webpage-Thssalonians Roa.html
+++ b/Cuisine Webpage-Thssalonians Roa.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8" />
+<title>Taste of travel</title>
+<meta name="description" content="embark on a culinary journey with taste of travel, exploring flavors around the world">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 
 body{
-  background-color:	#BCB88A;
+  background-color:#CD5C5C;
   font-family:Times New Roman,serif;
   
   }
@@ -20,9 +24,10 @@ blockquote {
   border-left: 8px solid #78C0A8;
   line-height: 1.6;
   position: relative;
-  background: #EDEDED;
+  background:#1A1110;
   box-shadow: 2px 3px 8px rgba(1, 1, 1, 1);
-  border-color:  #800020
+  border-color:#353839;
+  color:#F8F8FF;
   }
   
   .img{
