--- a/Cuisine Webpage-Thssalonians Roa.html
+++ b/Cuisine Webpage-Thssalonians Roa.html
@@ -31,7 +31,7 @@ blockquote {
   }
   
   
-    </style>
+</style>
 </head>
 <body>
 <h1>Discover the Flavors of Thailand</h1>
@@ -57,9 +57,8 @@ blockquote {
   </ul>
   <br>
   <div class="img">
-    <img src="https://edube.org/uploads/media/default/0001/04/thai-soup.jpg" class="centerImage" alt="CH Logo" height="320" width="350" alt="Tom Yoong Goong">
-  </div>
-  <h2>Ingredient Details</h2>
+    <img src="https://edube.org/uploads/media/default/0001/04/thai-soup.jpg" height="320" width="350" alt="Tom Yoong Goong">  
+    <h2>Ingredient Details</h2>
   <table>
   <tr bgcolor="grey">
   <td colspan="1"><strong>Ingredients</strong></td>
@@ -91,7 +90,8 @@ blockquote {
   <tr bgcolor="lightgrey">
   <td colspan="1">20 minutes</td>
   <td colsapn="1">Serve with steamed rice  jasmine tea
-  </td></tr>
+  </td>
+  </tr>
   </table>
   
   <h1>Enjoy!</h1>
