Update Cuisine Webpage-Thssalonians Roa.html

--- a/Cuisine Webpage-Thssalonians Roa.html
+++ b/Cuisine Webpage-Thssalonians Roa.html
@@ -89,8 +89,7 @@ blockquote{
   </tr>
   <tr bgcolor="lightgrey">
   <td colspan="1">20 minutes</td>
-  <td colsapn="1">Serve with steamed rice  jasmine tea
-  </td>
+  <td colsapn="1">Serve with steamed rice and jasmine tea</td>
   </tr>
   </table>
   
